# cpp_thread

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: useThread.cpp  useThread.h
